--- a/2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu personaj principal comedie/Eseu_personaj_principal_comedie.tex
+++ b/2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu personaj principal comedie/Eseu_personaj_principal_comedie.tex
@@ -1,7 +1,7 @@
 % Include the preamble
 \input{../../preamble.tex}
 
-\title{Eseu cu privire la tema și viziunea despre lume dintr-o comedie studiată}
+\title{Eseu despre particularitățile de construcție a personajului principal dintr-o comedie studiată}
 
 \begin{document}
  \maketitle % Show the title
