--- a/book/book.tex
+++ b/book/book.tex
@@ -195,7 +195,7 @@
 \chapter{Eseu cu privire la tema și viziunea despre lume dintr-o comedie studiată}
 \input{../2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu comedie/content.tex}
 
-\chapter{Eseu cu privire la tema și viziunea despre lume dintr-o comedie studiată}
+\chapter{Eseu despre particularitățile de construcție a personajului principal dintr-o comedie studiată}
 \input{../2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu personaj principal comedie/content.tex}
 
 \end{document}
