vă rog să ignorați că efectiv sunt analfabet functțional

--- a/book/book.tex
+++ b/book/book.tex
@@ -114,15 +114,15 @@
  \vspace*{1cm}
  \vspace{4\baselineskip}
  {\Huge
- Esee pentru bacalaureatul la \\ Limba și Literatura Română\par}
+ Eseuri pentru bacalaureatul la \\ Limba și Literatura Română\par}
  \vspace{4\baselineskip}
  de\par
  {\Large\textsc{Dobrete Andrei-Robert}\par}
  \vfill
  \includegraphics[height=\fontcharht\font`\B]{gitlab}
- \url{gitlab.com/Andy3153/esee_bac_romana}\par
+ \url{gitlab.com/Andy3153/eseuri_bac_romana}\par
  \includegraphics[height=\fontcharht\font`\B]{github}
- \url{github.com/Andy3153/esee_bac_romana}\par
+ \url{github.com/Andy3153/eseuri_bac_romana}\par
  \vspace{1.5\baselineskip}
  {\large\LaTeXe}
 \end{titlepage}
