--- a/etc/coperta portofoliu/coperta_portofoliu.tex
+++ b/etc/coperta portofoliu/coperta_portofoliu.tex
@@ -5,8 +5,8 @@ a4paper
 ]{article}
 
 % Packages
-\usepackage[utf8]{inputenc}         % UTF-8 support
-\usepackage[T1]{fontenc}            % Proper hyphenation
+%\usepackage[utf8]{inputenc}         % UTF-8 support
+%\usepackage[T1]{fontenc}            % Proper hyphenation
 \usepackage[romanian]{babel}        % Romanian characters support
 \usepackage[top=9cm]{geometry}      % Increase top margin height
 \usepackage{hyperref}               % Hyperlink support
@@ -48,12 +48,13 @@ urlcolor=black,
  \vspace{0.5cm}
  {\LARGE Dobrete Andrei-Robert}
 
- \vspace{10.26cm}
+ %\vspace{10.26cm}
+ \vfill
  \includegraphics[height=\fontcharht\font`\B]{gitlab}
- \url{gitlab.com/Andy3153/esee_bac_romana}
+ \url{gitlab.com/Andy3153/eseuri_bac_romana}
 
  \includegraphics[height=\fontcharht\font`\B]{github}
- \url{github.com/Andy3153/esee_bac_romana}
+ \url{github.com/Andy3153/eseuri_bac_romana}
 
  \vspace{0.5cm}
  {\large\LaTeX}
