--- a/2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantica/Eseu_poezie_romantica.tex
+++ b/2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantica/Eseu_poezie_romantica.tex
@@ -1,168 +1,9 @@
-%%
-%% Basic LaTeX template by Andy3153
-%% created   04/10/21 ~ 18:21:32
-%% modified1 15/10/21 ~ 23:15:05
-%% modified2 03/11/21 ~ 18:37:45
-%%
+% Include the preamble
+\input{../../preamble.tex}
 
-% Document preamble
-\documentclass[
-12pt,                        % Font size
-a4paper                      % Paper type
-]{article}
-
-% Packages
-\usepackage[
-margin=2.7cm,                % Margin size
-marginparwidth=2cm,          % Margin note size
-marginparsep=3mm             % Space between margin and text
-]{geometry}
-\usepackage[utf8]{inputenc}  % UTF-8 support
-\usepackage[T1]{fontenc}     % Proper hyphenation
-\usepackage[romanian]{babel} % Romanian characters support
-\usepackage{indentfirst}     % Add paragraph indentation even after a section
-\usepackage{marginnote}      % Notes on the margins of a document (more advanced \marginpar)
-\usepackage{titlesec}        % Customize titles
-
-% Custom titles, sections, subsections etc. format
-\titleformat*{\section}{\large\bfseries}
-\titleformat{\subsection}{\normalfont\normalfont\bfseries}{}{0pt}{}
-
-% Page numbering
-%\pagenumbering{gobble} % uncomment if you want to disable it
-
-% Custom commands
-% Format: \newcommand{\command}{action (add '\ ' or '{}' if it won't add a space properly)}
-\newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}} % Roman numerals
-\newcommand{\operatitle}{\textbf{\textit{„Luceafărul”\ }}} % title of the commented opera
-\newcommand{\operaauthor}{Mihai Eminescu\ } % author of the commented opera
-\newcommand{\operaorigtitle}{\textbf{\textit{Fata în grădina de aur}}}
-
-% Basic document info
 \title{Eseu cu privire la tema și viziunea despre o poezie romantică}
-\date{}   % Show no date in the title
-\author{} % Empty author to not get a warn about missing author
 
 \begin{document}
-\maketitle % Show the title
-%\reversemarginpar % put margin notes on left instead of on right
-
-
-% Beginning of text
-
-\subsection{Context}
-
-\marginnote{contextul apariției}[0.1cm]
-Poemul \operatitle a apărut în 1883, în \textit{Almanahul Societății Academice Social-Literare} \textbf{România Jună} din Viena, fiind apoi reprodus în revista \textit{Convorbiri literare}.
-
-\section{Prezentarea originii și a sursei de inspirație a operei literare}
-
-\marginnote{surse de inspirație}[0.8cm]
-Poemul este inspirat din basmul românesc \operaorigtitle, cules de austriacul Richard Kunisch. Basmul cuprindea povestea unei frumoase fete de împărat izolată de tatăl ei într-un castel, de care se îndrăgostește un zmeu. Fata însă se sperie de nemurirea zmeului și-l respinge. Zmeul merge la Demiurg, dorește să fie dezlegat de nemurire, dar este refuzat. Întors pe pământ, zmeul o vede pe fată, care între timp se îndrăgostise de un pământean, un fecior de împărat, cu care fugise în lume. Furios, zmeul se răzbună pe ei și îi desparte prin vicleșug. Peste fată el prăvălește o stâncă, iar pe feciorul de împărat îl lasă să moară în Valea Amintirii.
-
-Eminescu valorifică inițial acest basm în perioada studiilor berlineze, într-un poem intitulat tot \textbf{\textit{Fata în grădina de aur}}, dar modifică finalul. Răzbunarea nu i se pare potrivită pentru superioara ființă nemuritoare, așa că zmeul din poemul lui Eminescu rostește cu amărăciune către cei doi pământeni: \textit{„Fiți fericiți -- cu glasu-i stins a spus --/ Atât de fericiți, cât viața toată/ Un chin s-aveți -- de-a nu muri deodată!”}
-
-Între 1880 și 1883, poemul este prelucrat în cinci variante succesive.
-
-Alături de sursele folclorice ale poemului (basmele prelucrate: \operaorigtitle, \textbf{\textit{Miron și frumoasa fără corp}} și \textbf{mitul zburătorului}), poetul valorifică surse mitologice și izvoare filosofice (antinomiile dintre geniu și omul comun, din filosofia lui Arthur Schopenhauer).
-
-\section{Evidențierea trăsăturilor care fac posibilă încadrarea piesei într-o tipologie, într-un curent cultural/literar, într-o orientare tematică}
-
-\marginnote{poem alegoric}[-0.2cm]
-Poemul romantic \operatitle de \operaauthor este o alegorie pe tema geniului, dar și o meditație asupra condiției umane duale (omul supus unui destin pe care tinde să îl depășească).
-\marginnote{meditație}[0cm]
-Poemul reprezintă o \textbf{meditație asupra destinului geniului în lume}, văzut ca o ființă solitară și nefericită, opusă omului comun.
-
-\marginnote{lirism de măști/ roluri}[-0.2cm]
-O altă interpretare socotește „personajele” poemului drept „voci” sau măști ale poetului, în sensul că eul poetic se proiectează în diverse ipostaze lirice. Poetul s-a proiectat nu numai sub chipul lui Hyperion, geniul, dar și sub chipul lui Cătălin, reprezentând aspectul teluric al bărbatului, sau al Demiurgului, exprimând aspirația spre impersonalitatea universală, și chiar sub chipul Cătălinei, muritoarea care tânjește spre absolut.
-
-\marginnote{poem epic-liric-dramatic}[-0.2cm]
-\textbf{Poemul romantic} se realizează prin \textbf{amestecul genurilor} (epic, liric și dramatic) și al \textbf{speciilor}.
-
-\marginnote{viziunea romantică}[0.6cm]
-\textbf{Viziunea romantică} e dată de temă, de relația geniu-societate, de structură, de alternarea planului terestru cu planul cosmic, de antiteze, de motivele literare (luceafărul, noaptea, visul etc.), de imaginarul poetic, de cosmogonii, de amestecul speciilor (elegie, meditație, idilă, pastel), de metamorfozele lui Hyperion.
-
-\section{Prezentarea elementelor de structură și de compoziție ale textului dramatic, semnificative pentru tema și viziunea despre lume {\footnotesize (de exemplu: acțiune, conflict, relații temporale și spațiale, registre stilistice, limbajul personajelor, notațiile autorului etc.)}}
-
-\marginnote{elemente clasice}[-0.2cm]
-\textbf{Elemente clasice} sunt echilibrul compozițional, simetria, armonia și caracterul gnomic.
-
-\marginnote{tema}[0.3cm]
-\textbf{Tema} poemului este \textbf{romantică}: problematica geniului în raport cu lumea, iubirea și cunoașterea.
-
-\marginnote{titlul}[0.3cm]
-\textbf{Titlul} este un motiv anticipativ, avertizând asupra naturii duale a geniului care participă deopotrivă la ordinea umană și la aceea divină. Semnificația lui trimite, la un prim nivel, către numele popular al Planetei Venus, numită în folclor și \textit{„Steaua ciobanului”}. Deși cuvântul în sine are origini latinești, unde \textit{„Lucifer”} înseamnă „aducător de lumină”, în tradiția biblică el este asociat îngerului căzut, aparținând astfel demonicului. La un al doilea nivel, având în vedere ipostaza de Hyperion a Luceafărului, titlul evocă mitologia greacă, unde el era fiul lui Uranus și al Geei, al Cerului și al Pământului, fiind condamnat pentru originea sa la un echilibru precar între lumina celestă și atracția telurică.
-
-\marginnote{compoziția poemului}[0.8cm]
-\textbf{Compoziția romantică} se realizează prin opoziția planurilor cosmic și terestru și a două ipostaze ale cunoașterii: geniul și omul comun. Simetria compozițională se realizează în cele patru părți ale poemului astfel: cele două planuri interferează în prima și în ultima parte, pe când partea a doua reflectă doar planul terestru (iubirea dintre Cătălin și Cătălina), iar partea a treia este consacrată planului cosmic (călătoria lui Hyperion la Demiurg, ruga și răspunsul).
-
-\marginnote{incipitul}[0.3cm]
-\textbf{Incipitul} poemului se află sub semnul basmului. Timpul este mitic: \textit{„A fost odată ca-n povești/ A fost ca niciodată.”} Cadrul abstract este umanizat. Portretul detei de împărat, realizat prin superlativul absolut de factură populară \textit{„o prea frumoasă fată”}, scoate în evidență unicitatea terestră.
-
-\marginnote{partea întâi}[-0.3cm]
-\textbf{Partea întâi} este o splendidă poveste de iubire.
-
-Fata contemplă Luceafărul de la fereastra dinspre mare a castelului. La rându-i, Luceafărul, privind spre \textit{„umbra negrului castel”}, o îndrăgește pe fată și se lasă copleșit de dor. Semnificația alegoriei este că fata pământeană aspiră spre absolut, iar spiritul superior simte nevoia compensatorie a materialității.
-
-\marginnote{înger}[0.3cm]
-Luceafărul are o frumusețe construită după \textbf{canoanele romantice}: \textit{„păr de aur moale”}, \textit{„umerele goale”}, \textit{„umbra feței străvezii”}. În contrast cu paloarea feței sunt ochii, care ilustrează prin scânteiere viața interioară. Strălucirea lor este interpretată de fată ca semn al morții. Ea înțelege incandescența din ochii Luceafărului ca semn al glacialității și refuză să-l urmeze.
-
-\marginnote{demon}[0.3cm]
-În antiteză cu imaginea angelică a primei întrupări, aceasta este circumscrisă demonicului, după cum o percepe fata: \textit{„O, ești frumos, cum numa-n vis/ Un demon se arată.”} Pentru a doua oară, paloarea feței și lucirea ochilor, semne ale dorinței de absolut, sunt înțelese de fată ca atribute ale morții: \textit{„Privirea ta mă arde.”} Deși unică între pământeni, fata refuză din nou să îl urmeze.
-
-\marginnote{partea a doua}[0.3cm]
-\textbf{Partea a doua}, care are în centru idila dintre fata de împărat, numită acum Cătălina și pajul Cătălin, înfățișează repeziciunea cu care se stabilește legătura sentimentală între exponenții lumii terestre. Asemănarea numelor sugerează apartenența la aceeași categorie: a omului comun.
-
-Cătălin devine întruchiparea teluricului, a mediocrității pământene: \textit{„viclean copil de casă”}, \textit{„Băiat din flori și de pripas,/ Dar îndrăzneț cu ochii”}. Idila se desfășoară sub forma unui joc. Pentru a o seduce pe Cătălina, Cătălin urmează o tehnică asemănătoare cu aceea a vânării păsărilor în Evul Mediu. Cei doi formează un cuplu norocos și fericit, supus legilor pământene, deosebite de legea după care trăiește Luceafărul.
-
-Chiar dacă acceptă iubirea pământeană, Cătălina aspiră încă la iubirea ideală pentru Luceafăr.
-
-\marginnote{partea a treia}[-0.1cm]
-\textbf{Partea a treia} ilustrează planul cosmic și constituie cheia de boltă a poemului. Această parte poate fi divizată la rândul ei în trei secvențe poetice: zborul cosmic, rugăciunea, convorbirea cu Demiurgul și liberarea.
-
-\marginnote{zborul cosmic}[-0.1cm]
-Zborul cosmic potențează intensitatea sentimentelor, lirismul, setea de iubire ca act al cunoașterii absolute.
-
-\marginnote{dialog cu Demiurgul}[0.3cm]
-În dialog cu Demiurgul, Luceafărul este numit Hyperion (nume de sugestie mitologică, gr. \textit{cel care merge pe deasupra}).
-
-\marginnote{rugăciunea}[0.8cm]
-Hyperion îi cere Demiurgului să-l dezlege de nemurire pentru a descifra taina iubirii absolute, în numele căreia este gata de sacrificiu: \textit{„Reia-mi al nemuririi nimb/ Și focul din privire,/ Și pentru toate dă-mi în schimb/ O oră de iubire...”} Demiurgul refuză cererea lui Hyperion. Aspirația lui este imposibilă, căci el face parte din ordinea primordială a cosmosului, iar desprinderea sa ar duce din nou la haos.
-
-\marginnote{eliberarea}[0.3cm]
-Demiurgul păstrează pentru final argumentul infidelității fetei, dovedindu-i încă o dată Luceafărului superioritatea sa, și în iubire, față de muritoarea Cătălina: \textit{„Și pentru cine vrei să mori?/ Întoarce-te, te-ndreaptă/ Spre-acel pământ rătăcitor/ Și vezi ce te așteaptă.”}
-
-\marginnote{partea a patra}[-0.1cm]
-\textbf{Partea a patra} este constituită simetric față de prima, prin interferența celor două planuri: terestru și cosmic.
-
-\marginnote{idila Cătălin - Cătălina}[0.3cm]
-Idila Cătălin - Cătălina are loc într-un cadru romantic, creat prin prezența simbolurilor specifice.
-
-Declarația de dragoste a lui Cătălin, pătimașa lui sete de iubire, exprimată prin metaforele \textit{„noaptea mea de patimi”}, \textit{„durerea mea”}, îl proiectează pe acesta într-o altă lumină decât aceea din partea a doua a poemului.
-
-\marginnote{finalul}[0.3cm]
-Luceafărul exprimă dramatismul propriei condiții, care se naște din constatarea că relația om-geniu este incompatibilă.
-
-Omul comun este incapabil să-și depășească limitele, iar geniul manifestă un profund dispreț față de această incapacitate: \textit{„Ce-ți pasă ție, chip de lut,/ Dac-oi fi eu sau altul?”} Geniul constată cu durere că viața cotidiană a omului urmează o mișcare circulară, orientată spre accidental și întâmplător: \textit{„Trăind în cercul vostru strâmt/ Norocul vă petrece,/ Ci eu în lumea mea mă simt/ Nemuritor și rece.”}
-
-\marginnote{limbajul textului poetic}[0.5cm]
-Antiteza dintre planul terestru și cel cosmic este sugerată, \textbf{la nivel fonetic}, de alternarea tonului minor cu cel major, realizată prin distribuția consoanelor și a vocalelor.
-
-Muzicalitatea elegiacă, meditativă, este dată și de particularitățile prozodice: măsura versurilor de 7-8 silabe, ritmul iambic, rima încrucișată; sunt prezente asonanțele și rima interioară.
-
-\textbf{La nivel morfologic}, dativul etic și dativul posesiv susțin tonul de intimitate.
-
-\textbf{La nivel stilistic}, poemul este construit pe baza alegoriei, dar și a antitezei între omul de geniu și oamenii comuni, antiteză care apare și în discursul Demiurgului.
-
-Prezența metaforelor, mai ales în primul tablou, în cadrul dialogului dintre Luceafăr și fata de împărat, accentuează ideea iubirii absolute ce se cere eternizată într-un cadru pe măsură: \textit{„palate de mărgean”}, \textit{„cununi de stele”}.
-
-\subsection{Concluzie}
-
-Pentru ilustrarea condiției geniului, poemul \operatitle armonizează teme și motive romantice, atitudini romantice, elemente de imaginar poetic și procedee artistice cultivate de scriitor, simboluri ale eternității/morții și ale temporalității/vieții.
-
-
-
-
-
-
+ \maketitle % Show the title
+ \input{content.tex}
 \end{document}
