--- a/book/book.tex
+++ b/book/book.tex
@@ -143,6 +143,7 @@
 % Beginning of text
 
 % esee
+% gen epic
 % harap-alb
 \chapter{Eseu cu privire la tema și viziunea despre lume dintr-un basm cult studiat}
 \input{../2021.10.09 („Povestea lui Harap-Alb” de Ion Creangă)/Eseu basm cult/content.tex}
@@ -191,6 +192,7 @@
 \input{../2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu personaj principal roman psihologic/content.tex}
 
 
+% gen dramatic
 % osp
 \chapter{Eseu cu privire la tema și viziunea despre lume dintr-o comedie studiată}
 \input{../2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu comedie/content.tex}
@@ -198,4 +200,9 @@
 \chapter{Eseu despre particularitățile de construcție a personajului principal dintr-o comedie studiată}
 \input{../2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu personaj principal comedie/content.tex}
 
+
+% gen liric
+% ciuleafarul
+\chapter{Eseu cu privire la tema și viziunea despre o poezie romantică}
+\input{../2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantica/content.tex}
 \end{document}
