--- a/book/book.tex
+++ b/book/book.tex
@@ -1,7 +1,6 @@
 %%
 %% Book containing everything in this repo
 %% COMPILE WITH XeLaTeX
-%% IN TESTING CURRENTLY
 %%
 
 \documentclass[
@@ -205,4 +204,9 @@
 % ciuleafarul
 \chapter{Eseu cu privire la tema și viziunea despre o poezie romantică}
 \input{../2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantica/content.tex}
+
+
+% plumb
+\chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie simbolistă studiată}
+\input{../2022.02.05 („Plumb” de G. Bacovia)/Eseu poezie simbolista/content.tex}
 \end{document}
