--- a/book/book.tex
+++ b/book/book.tex
@@ -201,7 +201,7 @@
 
 
 % gen liric
-% ciuleafarul
+% luceafarul
 \chapter{Eseu cu privire la tema și viziunea despre o poezie romantică}
 \input{../2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantica/content.tex}
 
@@ -209,4 +209,8 @@
 % plumb
 \chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie simbolistă studiată}
 \input{../2022.02.05 („Plumb” de G. Bacovia)/Eseu poezie simbolista/content.tex}
+
+% testament
+\chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie modernistă/artă poetică studiată}
+\input{../2022.02.12 („Eu nu strivesc corola de minuni a lumii” de Lucian Blaga)/Eseu poezie modernista/content.tex}
 \end{document}
