--- a/book/book.tex
+++ b/book/book.tex
@@ -41,11 +41,28 @@
 % Colors
 \definecolor{gray75}{gray}{0.75}
 
-% Custom format for titles, sections, subsecions etc.
-\titleformat{\chapter}[hang]{\Large}{\thechapter\hspace{15pt}\textcolor{gray75}{|}\hspace{15pt}}{0pt}{\Large}
-\renewcommand{\thesection}{\arabic{section}}%
-\titleformat*{\section}{\large\bfseries}
-\titleformat{\subsection}{\normalfont\normalfont\bfseries}{}{1.5em}{}
+% Custom format for titles, sections etc.
+\titleformat{\part}[display]
+ {\Huge\scshape\filright}
+ {\partname~\thepart:}
+ {20pt}
+ {\thispagestyle{empty}}
+
+\titleformat{\chapter}[hang]
+ {\Large}
+ {\thechapter\hspace{15pt}\textcolor{gray75}{|}\hspace{15pt}}
+ {0pt}
+ {\thispagestyle{chapterfancystyle}\Large}
+
+\renewcommand{\thesection}{\arabic{section}}
+\titleformat*{\section}
+ {\large\bfseries}
+
+\titleformat{\subsection}
+ {\normalfont\normalfont\bfseries}
+ {}
+ {1.5em}
+ {}
 
 % Custom commands
 % Format: \newcommand{\command}[variable]{action #variable}
@@ -74,21 +91,13 @@
  \renewcommand{\footrulewidth}{1pt}
 }
 
-\fancypagestyle{tocfancystyle}{
- \fancyhf{}
- \fancyhead[LE]{Cuprins}
- \fancyfoot[LE,RO]{\thepage}
- \renewcommand{\headrulewidth}{2pt}
- \renewcommand{\footrulewidth}{1pt}
-}
-
 \fancypagestyle{plain}{
  \fancyhf{}
  \fancyhead[LE]{\small\textsc{Esee pentru bacalaureat}}
  \fancyhead[RO]{
   \begingroup
     \small
-    \let\textbfit\relax
+    \let\textbfit\relax % smart thing to use \textsc in header but keep it bfit everywhere else
     \textsc{\operatitle\ -- \operaauthor}
   \endgroup
  }
@@ -97,17 +106,14 @@
  \renewcommand{\footrulewidth}{1pt}
 }
 
-% Patch chapter to use custom header
-\patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{chapterfancystyle}}{}{}
-
-
-
-%%%%%%%%%%%%%%%%%%
-
+% Use empty pagestyle on blank pages between chapters
+\makeatletter
+\def\cleardoublepage{\clearpage\if@twoside \ifodd\c@page\else
+ \hbox{}\thispagestyle{empty}\newpage\if@twocolumn\hbox{}\newpage\fi\fi\fi}
+\makeatother
 
 
 \begin{document}
-\pagestyle{empty}
 % Create a title page
 \begin{titlepage}
  \centering
@@ -132,20 +138,39 @@
 \addtocontents{toc}{\string\renewcommand{\protect\cftchapfont}{\protect\normalfont}}
 \addtocontents{toc}{\string\renewcommand{\protect\cftchapleader}{\protect\normalfont\protect\cftdotfill{\protect\cftsecdotsep}}}
 
+% EVERYTHING YOU SEE HERE
+%      was made in order to
+%          disable page numbers, headers, everything
+%                  inside the Table of
+%                          Contents
+%                                 (why is ToC so hard to make yours)
+\addtocontents{toc}{\protect\thispagestyle{empty}}
+\clearpage
+{
+  \pagestyle{empty}
+  \fancypagestyle{plain} % create temporary plain pagestyle
+  {
+    \fancyhf{}
+    \renewcommand{\headrulewidth}{0pt}
+    \renewcommand{\footrulewidth}{0pt}
+  }
+  \tableofcontents       % actually generate the ToC
+  \thispagestyle{empty}
+}
+\pagestyle{plain}        % revert to plain pagestyle
 
-\tableofcontents % Generate the ToC
 
-%\addtocontents{toc}{~\hfill\textbf{Pagina}\par} % text above page nr
 
-\pagestyle{plain}
+%%%%%%%%%%%%%%%%%%
+
 
 
 % Beginning of text
 
 % esee
-% gen epic
-\clearpage
-\addcontentsline{toc}{chapter}{\textbf{Gen epic}}
+\part{Gen epic}
+
+
 % harap-alb
 \chapter{Eseu cu privire la tema și viziunea despre lume dintr-un basm cult studiat}
 \input{../2021.10.09 („Povestea lui Harap-Alb” de Ion Creangă)/Eseu basm cult/content.tex}
@@ -194,10 +219,10 @@
 \input{../2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu personaj principal roman psihologic/content.tex}
 
 
-% gen dramatic
-\addtocontents{toc}{\protect\newpage}
-\clearpage
-\addcontentsline{toc}{chapter}{\textbf{Gen dramatic}}
+
+\part{Gen dramatic}
+
+
 % osp
 \chapter{Eseu cu privire la tema și viziunea despre lume dintr-o comedie studiată}
 \input{../2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu comedie/content.tex}
@@ -206,9 +231,10 @@
 \input{../2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu personaj principal comedie/content.tex}
 
 
-% gen liric
-\clearpage
-\addcontentsline{toc}{chapter}{\textbf{Gen liric}}
+
+\part{Gen liric}
+
+
 % luceafarul
 \chapter{Eseu cu privire la tema și viziunea despre o poezie romantică}
 \input{../2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantica/content.tex}
