--- a/book/book.tex
+++ b/book/book.tex
@@ -244,7 +244,13 @@
 \chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie simbolistă studiată}
 \input{../2022.02.05 („Plumb” de G. Bacovia)/Eseu poezie simbolista/content.tex}
 
-% testament
+
+% corola
 \chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie modernistă/artă poetică studiată}
 \input{../2022.02.12 („Eu nu strivesc corola de minuni a lumii” de Lucian Blaga)/Eseu poezie modernista/content.tex}
+
+
+% testament
+\chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie modernistă/artă poetică studiată}
+\input{../2022.02.19 („Testament” de Tudor Arghezi)/Eseu arta poetica/content.tex}
 \end{document}
