riga crypto -> book

--- a/2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/content.tex
+++ b/2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/content.tex
@@ -1,1 +1,74 @@
- 
+% Commands
+\renewcommand{\operatitle}{\textbfit{„Riga Crypto și lapona Enigel”}} % title of the text
+\renewcommand{\operaauthor}{Ion Barbu} % author of the text
+
+
+% Beginning of text
+\subsection{Context}
+
+Publicată în 1924, integrată apoi în volumul \textbfit{„Joc secund”}, balada \operatitle\ face parte din a doua etapă de creație barbiană, numită baladic-orientală, dar anunță dezvoltarea ulterioară a poeziei lui \operaauthor.
+
+
+\section{Evidențierea trăsăturilor care fac posibilă încadrarea poeziei studiate într-o tipologie, într-un curent cultural/literar, într-o orientare tematică}
+
+\marginnote{poem alegoric}[1.2cm]
+\operatitle\ este subintitulată \textit{„Baladă”}, începe ca un cântec bătrânesc de nuntă, dar se realizează în viziune modernă, ca un amplu poem de cunoaștere și poem alegoric, o poveste de iubire din lumea vegetală. Autorul păstrează din specia tradițională schema epică și personajele antagonice, dar evenimentele narate sunt de natură fantastică (dialogul în vis dintre rigă și laponă) și alegorică. Scenariul epic este dublat de caracterul dramatic și de \textit{„lirismul de măști”}, personajele având semnificații simbolice multiple (materia și spiritul etc.).
+
+Poemul se încadrează modernismului interbelic prin intelectualizarea emoției, imaginar poetic inedit, ambiguitate, metafore surprinzătoare și cuvinte cu sonorități neobișnuite, înnoiri prozodice.
+
+
+\section{Prezentarea imaginilor/ideilor poetice, relevante pentru te\-ma și viziunea despre lume din textul studiat}
+
+Tema poeziei o reprezintă iubirea ca modalitate de cunoaștere a lumii. Fiind „un \textbfit{Luceafăr} întors”, poemul prezintă drama cunoașterii și a incompatibilității dintre două lumi (regnuri).
+
+Titlul baladei trimite cu gândul la marile povești de dragoste din literatura universală, \textbfit{„Romeo și Julieta”}, \textbfit{„Tristan și Isolda”}. Însă la \operaauthor, membrii cuplului sunt antagonici (fac parte din regnuri diferite). Sunt personaje romantice cu trăsături excepționale, dar negative în raport cu norma comună (Crypto e \textit{„sterp”} și \textit{„nărăvaș/Că nu voia să înflorească”}, iar Enigel este \textit{„prea-cuminte”}).
+
+\marginnote{semnificația titlului}[-0.3cm]
+Numele Crypto are dublă semnificație: cel tăinuit, \textit{„inimă ascunsă”}, provenind din adjectivul \textit{„criptic”}, (\textit{„ascuns”}, \textit{„tăinuit”}), dar sugerează, în egală măsură, apartenența sa la familia ciupercilor, numele științific \textit{„criptogame”}. Personajul este rege (rigă) al făpturilor inferioare, din regnul vegetal. Numele cu sonoritate nordică Enigel sugerează originea laponei (de la pol) și trimite probabil la semnificația cuvântului din limba suedeză, \textit{„înger”} (care provine din latinescul \textit{„angelus”}).
+
+
+\section{Ilustrarea elementelor de compoziție și de limbaj ale textului poetic studiat, semnificative pentru tema și viziunea despre lume {\footnotesize\normalfont(de exemplu: imaginar poetic, titlu, incipit, relații de opoziție și de simetrie, motiv poetic, laitmotiv, figuri semantice/tropi, elemente de prozodie etc.)}}
+
+\marginnote{compoziție}[0.3cm]
+La nivel formal, poezia este alcătuită din două părți, fiecare dintre ele prezentând câte o nuntă: una împlinită, cadru al celeilalte nunți, povestită, ratată, modificată în final prin căsătoria lui Crypto cu măsălarița. Formula compozițională este aceea a povestirii în ramă.
+
+Prologul conturează în puține imagini atmosfera de la finalul unei nunți trăite. Primele patru strofe constituie rama viitoarei povești și reprezintă dialogul menestrelului cu \textit{„nuntașul fruntaș”}.
+
+Partea a doua prezintă povestea de iubire neîmplinită dintre Enigel și riga Crypto. Nunta povestită cuprinde mai multe tablouri poetice: portretul și împărăția rigăi Crypto (strofele 5 -- 7), portretul, locurile natale și oprirea din drum a laponei Enigel (strofele 8 -- 9), întâlnirea dintre cei doi (strofa 10), cele trei chemări ale rigăi și primele două refuzuri ale laponei (strofele 11 -- 15), răspunsul laponei și refuzul categoric cu relevarea relației dintre simbolul solar și propria condiție (strofele 16 -- 20), încheierea întâlnirii (strofele 21 -- 22), pedepsirea rigăi în finalul baladei (strofele 23 -- 27). Modurile de expunere sunt, în ordine: descrierea, dialogul și narațiunea.
+
+În expozițiune, sunt prezentate în antiteză portretele membrilor cuplului și locurile lor natale, deosebirile dintre ei generând intriga.
+
+Riga Crypto, \textit{„inimă ascunsă”}, este craiul bureților, căruia dragostea pentru Enigel, \textit{„laponă mică, liniștită”}, îi este fatală. Singura lor asemănare este statutul superior în interiorul propriei lumi: el este rigă al plantelor inferioare, care nu înfloresc, iar păstorița care își conduce turmele de reni spre sud este o stăpână a regnului animal, în ipostaza de ființă rațională, omul -- \textit{„fiară bătrână”}.
+
+\marginnote{imaginar poetic}[0.3cm]
+Spațiul definitoriu al existenței, pentru Crypto, este umezeala perpetuă și impură, în timp ce lapona vine \textit{„din țări de gheață urgisită”}, spațiu rece, ceea ce explică aspirația ei spre soare și lumină, dar și mișcarea de transhumanță care ocazionează popasul în ținutul rigăi.
+
+Membrii cuplului fac parte din regnuri diferite și, de aceea, nu pot comunica în plan real. Întâlnirea lor se realizează în visul fetei, la fel ca în \textbfit{„Luceafărul”}. Riga este cel care rostește de trei ori descântecul de dragoste și, de tot atâtea ori, lapona îl respinge. Povestea propriu-zisă se dovedește a fi fantastică, ca și în poemul eminescian, doar că rolurile sunt inversate. În dialogul lor, formulele de adresare sugerează familiaritate, afecțiune blândă: repetiția \textit{„Enigel, Enigel”}, epitetul \textit{„rigă blând”}.
+
+În prima chemare-descântec, cu rezonanțe de incantație magică, Crypto își îmbie aleasa cu \textit{„dulceață”} și cu \textit{„fulgi”}, elemente ale existenței sale vegetative, dar care aici capătă conotații erotice. Darul lui este refuzat categoric de Enigel: \textit{„Eu mă duc să culeg/Fragii fragezi mai la vale”}. Refuzul laponei îl pune într-o situație dilematică, dar opțiunea lui e fermă și merge până la sacrificiul de sine, în a doua chemare: \textit{„Dacă pleci să culegi/Începi, rogu-te, cu mine”}.
+
+Al doilea refuz este susținut de enumerarea atributelor lui Crypto: \textit{„blând”}, \textit{„plăpând”}, \textit{necopt -- „Lasă. Așteaptă de te coace”}. Opoziția \textit{„copt”} -- \textit{„necopt”}, reluată în al treilea refuz prin antiteza \textit{soare-umbră}, pune în evidență incompatibilitatea lor. Imaginii de fragilitate a lui Crypto lapona îi opune aspirația ei spre absolut. Soarele este simbolul existenței spirituale, al împlinirii umane, în antiteză cu \textit{„umbra”}, simbol al existenței instinctuale, sterile, vegetative.
+
+Pentru a-și continua drumul către soare și cunoaștere, lapona refuză descântecul rigăi, deși regretă și plânge. Descântecul se întoarce în mod brutal asupra celui care l-a rostit și-l distruge. Făptura firavă este distrusă de propriul vis, cade victimă neputinței și îndrăznelii de a-și depăși limitele.
+
+Finalul este trist. Riga Crypto se transformă într-o ciupercă otrăvitoare, obligat să rămână alături de făpturi asemenea lui, \textit{„Laurul-Balaurul”} și \textit{„măsălarița-mireasă”}. Încercarea ființei inferioare de a-și depăși limitele este pedepsită cu nebunia.
+
+\marginnote{figuri semantice/ tropi}[1.3cm]
+Soarele, simbolul spiritului, este imaginat în poem prin metaforele \textit{„roata albă”} (perfecțiunea geometrică) și \textit{„aprins inel”} (simbolul nunții), în antiteză cu \textit{„umbra”}, iar metafora \textit{„sufletul-fântână”} sugerează puritatea, setea de cunoaștere, veșnicia, fiind în antiteză cu \textit{„carnea”} (trupul, instinctele). Spiritul și sufletul sunt atribute ale ființei raționale, înțelepte. Făpturile inferioare care aspiră să dobândească spiritualitate sunt distruse de propriul vis, așa cum i se întâmplă lui Crypto, care „înnebunește” și se transformă în ciupercă otrăvitoare.
+
+Trei mituri fundamentale de origine greacă sunt valorificate în opera poetului: al soarelui (absolutul), al nunții și al oglinzii.
+
+Drumul spre sud al laponei are semnificația unui drum inițiatic, iar popasul în ținutul rigăi este o probă, trecută prin respingerea nunții pe o treaptă inferioară.
+\marginnote{semnificații}[0.3cm]
+Drumul trece prin cercul Venerii (iubirea ce reduce omul la ipostază de ființă instinctuală), apoi sufletul trebuie să mai urce o treaptă, cercul lui Mercur, mai pur, al intelectului, al cunoașterii raționale. Inițierea completă are loc prin adevărata \textit{nuntă} a trupului și spiritului cu însuși focarul vieții, prin trecerea omului în cercul Soarelui (cunoașterea absolută). Aspirația solară a laponei sugerează faptul că, în momentul întâlnirii cu riga Crypto, aceasta se află pe treapta lui Mercur, fără ca ea să fi trăit experiența iubirii. Chemările lui Crypto o atrag spre cercul Venerii. Ea trăiește iubirea ca experiență inițiatică, dar alege să-și urmeze drumul spre Soare (cunoașterea absolută).
+
+\marginnote{figuri de stil}[0.8cm]
+Sub raport stilistic, prezența inversiunilor (\textit{„zice-l-aș”}) și a vocativelor în prima parte a baladei evidențiază oralitatea textului. În portretizarea celor două personaje simbolice sunt utilizate epitetul și antiteza: Crypto este \textit{„sterp și nărăvaș”}, \textit{„rigă spân”}; lapona e \textit{„mică, liniștită”} și \textit{„prea-cuminte”}. Ambiguitatea este produsă de metaforele insolite: \textit{„Că sufletul nu e fântână/}[...]\textit{/Pahar e gândul, cu otravă”}.
+
+\marginnote{prozodie}[0.3cm]
+Alcătuirea prozodică pare destul de riguroasă inițial: catrene cu rimă încrucișată și măsură predominantă de 8 -- 9 silabe.
+
+
+\subsection{Concluzie}
+
+Poemul \operatitle\ impune o viziune modernă. Interpretarea dată de însuși \operaauthor\ poemului, \textit{„un \textbf{Luceafăr} întors”}, relevă asemănarea cu problematica capodoperei lui Mihai Eminescu, dar poemul modern este totuși \textit{„un Luceafăr cu rolurile inversate și într-un decor de o nebănuită noutate”}, cum remarcă Nicolae Manolescu.
