--- a/book/book.tex
+++ b/book/book.tex
@@ -253,4 +253,9 @@
 % testament
 \chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie modernistă/artă poetică studiată}
 \input{../2022.02.19 („Testament” de Tudor Arghezi)/Eseu arta poetica/content.tex}
+
+
+% riga crypto
+\chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie modernistă studiată}
+\input{../2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/content.tex}
 \end{document}
