--- a/2022.02.12 („Eu nu strivesc corola de minuni a lumii” de Lucian Blaga)/Eseu poezie modernista/content.tex
+++ b/2022.02.12 („Eu nu strivesc corola de minuni a lumii” de Lucian Blaga)/Eseu poezie modernista/content.tex
@@ -61,4 +61,6 @@ Sursele expresivității și ale sugestiei se regăsesc la fiecare nivel al limb
 
 O trăsătură modernistă a limbajului poetic este intelectualizarea emoției. În poezia lui Blaga, limbajul și imaginile artistice sunt puse în relație cu un plan filosofic secundar.
 
+\subsection{Concluzie}
+
 În concluzie, arta poetică \operatitle\ de \operaauthor\ aparține modernismului printr-o serie de particularități de structură și de expresivitate: viziunea asupra lumii (subiectivismul), intelectualizarea emoției, influențele expresioniste, noutatea metaforei, tehnica poetică, înnoirile prozodice.
