--- a/etc/coperta portofoliu/coperta_portofoliu.tex
+++ b/etc/coperta portofoliu/coperta_portofoliu.tex
@@ -13,7 +13,7 @@ a4paper
 \usepackage{graphicx}               % Image support
 
 % Image configuration
-\graphicspath{ {./src/} }
+\graphicspath{ {../../img/} }
 
 % Hyperlink configuration
 \hypersetup{
