--- a/book/book.tex
+++ b/book/book.tex
@@ -20,11 +20,11 @@
 \usepackage{indentfirst}     % Add paragraph indentation even after a section
 \usepackage{marginnote}      % Notes on the margins of a document (more advanced \marginpar)
 \usepackage{titlesec}        % Customize titles
-\usepackage{hyperref}        % Hyperlink support
 \usepackage{graphicx}        % Image support
 \usepackage{xcolor}          % Custom colors
 \usepackage{fancyhdr}        % Custom headers
 \usepackage[titles]{tocloft} % Customize ToC
+\usepackage{hyperref}        % Hyperlink support
 
 % Image path
 \graphicspath{ {../img/} }
@@ -46,13 +46,14 @@
  {20pt}
  {\thispagestyle{empty}}
 
+\newcommand{\DetermineHSpaceSize}{\ifnum\value{chapter} > 9 {\hspace{7pt}}\else{\hspace{15pt}}\fi} % Make the hspace that goes between chapter number and line smaller if number is past 10
 \titleformat{\chapter}[hang]
  {\Large}
- {\thechapter  \ifnum\value{chapter} > 9 {\hspace{7pt}}\else{\hspace{15pt}}\fi  \textcolor{gray75}{|}\hspace{15pt}}
+ {\thechapter\DetermineHSpaceSize\textcolor{gray75}{|}\hspace{15pt}}
  {0pt}
  {\thispagestyle{chapterfancystyle}\Large}
 
-\renewcommand{\thesection}{\arabic{section}}
+\renewcommand{\thesection}{\arabic{section}} % Remove chapter number from section
 \titleformat*{\section}
  {\large\bfseries}
 
@@ -69,6 +70,30 @@
 \newcommand{\operatitle}{}                                           % to not get errors
 \newcommand{\operaauthor}{}                                          % to not get errors
 
+\newcommand{\CustomToC} % command to generate ToC with empty pagestyle
+{
+ % EVERYTHING YOU SEE HERE
+ %      was made in order to
+ %          disable page numbers, headers, everything
+ %                  inside the Table of
+ %                          Contents
+ %                                 (why is ToC so hard to make yours)
+ \addtocontents{toc}{\protect\thispagestyle{empty}}
+ \clearpage               % new page to ensure it switched to empty pagestyle
+ {
+   \pagestyle{empty}
+   \fancypagestyle{plain} % create temporary plain pagestyle
+   {
+     \fancyhf{}
+     \renewcommand{\headrulewidth}{0pt}
+     \renewcommand{\footrulewidth}{0pt}
+   }
+   \tableofcontents       % actually generate the ToC
+   \thispagestyle{empty}
+ }
+ \pagestyle{plain}        % revert to plain pagestyle
+}
+
 % Customize \marginnote font
 \renewcommand\marginfont{\ttfamily\footnotesize}
 
@@ -78,13 +103,11 @@
 \DeclareFontFamily{T1}{cmtt}{\hyphenchar\font=45}
 
 % ToC customization
-\setcounter{tocdepth}{0}     % Make only chapters appear in ToC
-\renewcommand{\cftdot}{}     % Remove ToC dots
-
-% Disable bold in ToC
+\setcounter{tocdepth}{0} % Make only chapters appear in ToC
+\renewcommand{\cftdot}{} % Remove ToC dots
 \addtocontents{toc}{\string\renewcommand{\protect\cftchappagefont}{\protect\normalfont}}
 \addtocontents{toc}{\string\renewcommand{\protect\cftchapfont}{\protect\normalfont}}
-\addtocontents{toc}{\string\renewcommand{\protect\cftchapleader}{\protect\normalfont\protect\cftdotfill{\protect\cftsecdotsep}}}
+\addtocontents{toc}{\string\renewcommand{\protect\cftchapleader}{\protect\normalfont\protect\cftdotfill{\protect\cftsecdotsep}}} % Disable bold in ToC
 
 % Custom fancy styles
 \fancypagestyle{chapterfancystyle}{
@@ -92,11 +115,11 @@
  \fancyfoot[LE,RO]{\thepage}
  \renewcommand{\headrulewidth}{0pt}
  \renewcommand{\footrulewidth}{1pt}
-}
+} % style for chapter page
 
 \fancypagestyle{plain}{
  \fancyhf{}
- \fancyhead[LE]{\small\textsc{Esee pentru bacalaureat}}
+ \fancyhead[LE]{\small\textsc{Eseuri pentru bacalaureat}}
  \fancyhead[RO]{
   \begingroup
     \small
@@ -107,7 +130,7 @@
  \fancyfoot[LE,RO]{\thepage}
  \renewcommand{\headrulewidth}{2pt}
  \renewcommand{\footrulewidth}{1pt}
-}
+} % style for the rest of the document
 
 % Use empty pagestyle on blank pages between chapters
 \makeatletter
@@ -118,27 +141,7 @@
 
 \begin{document}
 \input{titlepage.tex} % Import the title page
-
-% EVERYTHING YOU SEE HERE
-%      was made in order to
-%          disable page numbers, headers, everything
-%                  inside the Table of
-%                          Contents
-%                                 (why is ToC so hard to make yours)
-\addtocontents{toc}{\protect\thispagestyle{empty}}
-\clearpage
-{
-  \pagestyle{empty}
-  \fancypagestyle{plain} % create temporary plain pagestyle
-  {
-    \fancyhf{}
-    \renewcommand{\headrulewidth}{0pt}
-    \renewcommand{\footrulewidth}{0pt}
-  }
-  \tableofcontents       % actually generate the ToC
-  \thispagestyle{empty}
-}
-\pagestyle{plain}        % revert to plain pagestyle
+\CustomToC            % Generate custom ToC
 
 
 
